<resources>
    <string name="app_name">WeatherProgect</string>
    <string name="region">Город</string>
    <string name="temperature">Температура</string>
    <string name="wind">Ветер</string>
    <string name="direction">Направление</string>
    <string name="windPower">Сила ветра</string>
    <string name="humidity">Влажность</string>
    <string name="humidityValue">Значение влажности</string>
    <string name="pressure">Давление</string>
    <string name="pressureValue">Значение давления</string>
    <string name="sunrise">Восход солнца</string>
    <string name="sunriseTime">Время</string>
    <string name="sunset">Заход солнца</string>
    <string name="sunsetTime">Время</string>
    <string name="dayLength">Продолжительность дня</string>
    <string name="dayLengthTime">Время</string>
    <string name="choosingASity">Выбрать город</string>
    <string name="forecast">Прогноз</string>
    <string name="settings">Настройки</string>
    <string name="weather">Текущая погода</string>
    <string name="settingsOnSett">Настройки</string>
    <string name="setLanguage">Выбор языка</string>
    <string name="setBackgraund">Выбор фона</string>
    <string name="setUnits">Единицы измерения</string>
    <string name="setMode">Режим отображения</string>
    <string name="setMaps">Карты</string>
    <string name="chooseLen">Выберите язык</string>
    <string-array name="spinnerLen">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string name="selectLen">Выбрать язык</string>
    <string name="textViewlen2">Вы изменили язык на </string>
    <string name="textViewLen3"></string>
    <string name="textViewChoiceSity">Выберите город</string>
    <string name="buttonChoiseCity">Выбрать</string>

    <string-array name="spinnerCity">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Новосибирск</item>
        <item>Екатеринбург</item>
        <item>Нижний-Новгород</item>
        <item>Казань</item>
        <item>Самара</item>
        <item>Челябинск</item>
        <item>Омск</item>
        <item>Ростов-На-Дону</item>
        <item>Уфа</item>
        <item>Красноярск</item>
        <item>Пермь</item>
    </string-array>


</resources>