<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints"
        android:weightSum="10">

        <TextView
            android:id="@+id/settingsOnSett"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/settingsOnSett"
            android:gravity="center" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/setLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="ToLenguage"
                    android:text="@string/setLanguage"
                    tools:ignore="OnClick" />

                <Button
                    android:id="@+id/setBackgraund"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setBackgraund" />

                <Button
                    android:id="@+id/setUnits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setUnits" />

                <Button
                    android:id="@+id/setMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setMode" />

                <Button
                    android:id="@+id/setMaps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setMaps" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/weather"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="toWeather"
                android:visibility="visible"
                android:text="@string/weather"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/forecast"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="visible"
                android:text="@string/forecast" />

            <Button
                android:id="@+id/settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="visible"
                android:text="@string/settings" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>